Fixing alignment on individual reason page content blocks to be top-aligned, doing the same to the secondary images in the left column

--- a/app/assets/stylesheets/pages/_reason.scss
+++ b/app/assets/stylesheets/pages/_reason.scss
@@ -3,6 +3,9 @@
 .success-stories,
 .reason {
   .support {
+    .-top-half {
+      flex-grow: 0;
+    }
     p {
       @include font-bold();
     }
@@ -14,6 +17,12 @@
     }
     .block-content.-image-cover {
       max-height: none;
+    }
+  }
+
+  .reason-content {
+    .block-content {
+      margin: 0 auto;
     }
   }
 
